--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.19.2
+  firebase_storage: ^10.3.2
+  url_launcher: ^6.1.5
+  get: ^4.6.5
+  easy_splash_screen: ^1.0.3
 
 dev_dependencies:
   flutter_test:
