--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.1.5
   get: ^4.6.5
   easy_splash_screen: ^1.0.3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
